# gtk4_dnd

./: LICENSE  README.md  meson.build
data/: dnd.css  github.aeldemery.gtk4_dnd.gresource.xml
src/: CanvasItem.vala  ColorSwatch.vala  CssButton.vala  Main.vala  MainWindow.vala  MenuHandler.vala
